@startuml

enum RoleEnum {
  employe
  gestionnaire
  responsable
}

class Magasin {
  id: Integer
  nom: String
  adresse: String
  ville: String
  region: String
}

class Utilisateur {
  id: Integer
  nom: String
  mot_de_passe: String
  role: RoleEnum
  magasin_id: Integer
}

class Client {
  id: Integer
  nom: String
  prenom: String
  email: String
  mot_de_passe: String
  adresse: String
  telephone: String
}

class Produit {
  id: Integer
  name: String
  category: String
  price: Float
}

class Stock {
  id: Integer
  magasin_id: Integer
  produit_id: Integer
  quantite: Integer
}

class StockCentral {
  id: Integer
  produit_id: Integer
  quantite: Integer
  seuil_minimum: Integer
}

class Panier {
  id: Integer
  client_id: Integer
  total: Float
}

class ArticlePanier {
  id: Integer
  panier_id: Integer
  produit_id: Integer
  quantite: Integer
}

class Commande {
  id: Integer
  client_id: Integer
  statut: String
  total: Float
  magasin_id: Integer
}

class LigneCommande {
  id: Integer
  commande_id: Integer
  produit_id: Integer
  quantite: Integer
  prix_unitaire: Float
}

class Vente {
  id: Integer
  date: DateTime
  quantite: Integer
  prix_total: Float
  magasin_id: Integer
}

class RapportTendance {
  id: Integer
  region: String
  total_ventes: Float
}

Utilisateur "1" o-- "1" Magasin
Utilisateur "*" --> "1" RoleEnum

Magasin "1" *-- "*" Stock
Stock "*" --> "1" Produit

Magasin "1" *-- "*" Vente
Vente "*" --> "1" Produit

StockCentral "*" *-- "1" Produit

Client "1" *-- "*" Panier
Panier "1" *-- "*" ArticlePanier
ArticlePanier "*" --> "1" Produit

Client "1" o-- "*" Commande
Commande "1" *-- "*" LigneCommande
LigneCommande "*" --> "1" Produit

Commande "*" --> "1" Magasin

RapportTendance "*" --> "1" Magasin

@enduml
